--- a/addons/project/views/project_task_views.xml
+++ b/addons/project/views/project_task_views.xml
@@ -290,7 +290,8 @@
                             <h1 class="d-flex justify-content-between align-items-center">
                                 <div class="d-flex w-100">
                                     <field name="priority" widget="priority" class="me-3"/>
-                                    <field name="name" options="{'line_breaks': False}" widget="text" class="o_task_name text-truncate w-md-75 w-100 pe-2" placeholder="Task Title..."/>
+                                    <field name="name" options="{'line_breaks': False}" widget="text" class="o_task_name text-truncate w-md-75 w-100 pe-2"
+                                        placeholder="Task Title..."/>
                                 </div>
                                 <div class="d-flex justify-content-end o_state_container" invisible="not active">
                                     <field name="state" widget="project_task_state_selection" class="o_task_state_widget"/>
@@ -302,17 +303,20 @@
                         </div>
                         <group>
                             <group>
-                                <field name="project_id" invisible="1"/>
+                                <field name="project_id" domain="[('active', '=', True), '|', ('company_id', '=', False), ('company_id', '=?', company_id)]"
+                                    invisible="1"/>
                                 <field name="milestone_id" placeholder="e.g. Product Launch" context="{'default_project_id': project_id}"
                                     invisible="not project_id or not allow_milestones"/>
-                                <field name="user_ids" invisible="1"/>
+                                <field name="user_ids" options="{'no_open': True, 'no_quick_create': True}" invisible="1"
+                                    domain="[('share', '=', False), ('active', '=', True)]"/>
                                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"
                                     context="{'project_id': project_id}"/>
                             </group>
                             <group>
-                                <field name="partner_id" nolabel="0" widget="res_partner_many2one" class="o_task_customer_field" invisible="not project_id"/>
-                                <field name="date_deadline" invisible="state in ['1_done', '1_canceled']"
+                                <field name="partner_id" widget="res_partner_many2one" invisible="not project_id"/>
+                               <field name="date_deadline" invisible="state in ['1_done', '1_canceled']"
                                     decoration-danger="date_deadline &lt; current_date  and state not in ['1_done', '1_canceled']"/>
+                                <field name="recurring_task" invisible="not active or parent_id"/>
                                 <label for="repeat_interval" invisible="not recurring_task"/>
                                 <div invisible="not recurring_task" class="d-flex" name="repeat_intervals">
                                     <field name="repeat_interval" required="recurring_task"
@@ -328,7 +332,7 @@
                         </group>
                         <notebook>
                             <page name="description_page" string="Description">
-                                <field name="description" type="html" options="{'collaborative': true, 'resizable': false}" placeholder="Add details about this task..."/>
+                                <field name="description" type="html" options="{'collaborative': true}" placeholder="Add details about this task..."/>
                             </page>
                             <page name="sub_tasks_page" string="Sub-tasks">
                                 <field name="child_ids" context="{
@@ -369,7 +373,7 @@
                                     <tree name="blocked_by_tree" editable="bottom" decoration-muted="state in ['1_done','1_canceled']" open_form_view="True">
                                         <field name="sequence" widget="handle"/>
                                         <field name="id" optional="hide"/>
-                                        <field name="priority" widget="priority" optional="show" nolabel="1" width="40px"/>
+                                        <field name="priority" widget="priority" nolabel="1" width="40px"/>
                                         <field name="state" widget="project_task_state_selection" nolabel="1" width="40px"/>
                                         <field name="name" widget="name_with_subtask_count"/>
                                         <field name="project_id" string="Project" optional="hide" options="{'no_open': 1}" column_invisible="True"/>
@@ -378,10 +382,10 @@
                                         <field name="partner_id" optional="hide" widget="res_partner_many2one" invisible="not project_id"/>
                                         <field name="user_ids" column_invisible="True" optional="show" domain="[('share', '=', False), ('active', '=', True)]"/>
                                         <field name="company_id" groups="base.group_multi_company" optional="hide"/>
-                                        <field name="date_deadline" invisible="state in ['1_done', '1_canceled']" optional="show"/>
+                                        <field name="date_deadline" invisible="state in ['1_done', '1_canceled']" optional="hide"/>
                                         <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}" decoration-danger="date_deadline &lt; current_date"
                                             optional="hide"/>
-                                        <field name="stage_id" optional="show"/>
+                                        <field name="stage_id" optional="hide"/>
                                         <!-- Technical always invisible fields -->
                                         <field name="subtask_count" column_invisible="True"/>
                                         <field name="closed_subtask_count" column_invisible="True"/>
@@ -400,7 +404,6 @@
                     <field name="company_id" invisible="1"/>
                     <field name="active" invisible="1"/>
                     <field name="recurrence_id" invisible="1"/>
-                    <field name="recurring_task" invisible="1"/>
                 </form>
             </field>
         </record>
@@ -440,7 +443,8 @@
                             <span class="o_stat_text">Parent Task</span>
                         </div>
                     </button>
-                    <button name="action_recurring_tasks" type="object" invisible="not active or not recurrence_id" class="oe_stat_button" icon="fa-repeat" groups="project.group_project_recurring_tasks">
+                    <button name="action_recurring_tasks" type="object" invisible="not active or not recurrence_id" class="oe_stat_button" icon="fa-repeat"
+                        groups="project.group_project_recurring_tasks">
                         <field name="recurring_count" widget="statinfo" string="Recurring Tasks"/>
                     </button>
                     <button name="%(project_task_action_sub_task)d" type="action" class="oe_stat_button" icon="fa-tasks"
@@ -471,17 +475,14 @@
                     <attribute name="widget">priority_switch</attribute>
                 </field>
                 <field name="project_id" position="attributes">
-                    <attribute name="domain">[('active', '=', True), '|', ('company_id', '=', False), ('company_id', '=?', company_id)]</attribute>
                     <attribute name="widget">project</attribute>
                     <attribute name="invisible">0</attribute>
                 </field>
                 <field name="user_ids" position="attributes">
-                    <attribute name="invisible">0</attribute>
-                    <attribute name="class">o_task_user_field</attribute>
-                    <attribute name="options">{'no_open': True, 'no_quick_create': True}</attribute>
                     <attribute name="widget">many2many_avatar_user</attribute>
-                    <attribute name="domain">[('share', '=', False), ('active', '=', True)]</attribute>
+                    <attribute name="invisible">0</attribute>
                 </field>
+                <field name="recurring_task" position="replace"/>
                 <field name="date_deadline" position="replace">
                     <label name="date_deadline_label" for="date_deadline"/>
                     <div id="date_deadline_and_recurring_task" class="d-inline-flex w-100">
