--- a/addons/sale_project/views/project_task_views.xml
+++ b/addons/sale_project/views/project_task_views.xml
@@ -158,21 +158,21 @@
                 <attribute name="invisible">not allow_billable</attribute>
             </xpath>
             <field name="partner_id" position="after">
-                <field name="sale_line_id" string="Sales Order Item" invisible="not allow_billable or not project_id or not partner_id"
-                    options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
                 <field name="allow_billable" invisible="1"/>
+                <field name="sale_line_id" string="Sales Order Item" invisible="not allow_billable or not partner_id"
+                    options='{"no_open": True}' readonly="1"/>
             </field>
             <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="after">
-                <field name="sale_line_id" string="Sales Order Item" invisible="not partner_id" options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
-                <field name="allow_billable" invisible="1"/>
+                <field name="allow_billable" column_invisible="1"/>
+                <field name="sale_line_id" string="Sales Order Item" column_invisible="not allow_billable or not partner_id" options='{"no_open": True}' readonly="1"/>
             </xpath>
             <xpath expr="//field[@name='child_ids']/tree/field[@name='partner_id']" position="attributes">
                 <attribute name="column_invisible">not parent.allow_billable</attribute>
                 <attribute name="invisible">not allow_billable</attribute>
             </xpath>
             <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="after">
-                <field name="sale_line_id" string="Sales Order Item" invisible="not partner_id" options='{"no_open": True}' readonly="1" context="{'create': False, 'edit': False, 'delete': False}"/>
-                <field name="allow_billable" invisible="1"/>
+                <field name="allow_billable" column_invisible="1"/>
+                <field name="sale_line_id" string="Sales Order Item" column_invisible="not allow_billable or not partner_id" options='{"no_open": True}' readonly="1"/>
             </xpath>
             <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='partner_id']" position="attributes">
                 <attribute name="column_invisible">not parent.allow_billable</attribute>
@@ -200,10 +200,10 @@
             <field name="sale_line_id" position="replace">
                 <field name="project_sale_order_id" invisible="1"/>
                 <field name="sale_order_id" invisible="True" groups="sales_team.group_sale_salesman"/>
-                <label for="sale_line_id" invisible="not allow_billable or not project_id or not partner_id"/>
+                <label for="sale_line_id" invisible="not allow_billable or not partner_id"/>
                 <div 
                     class="o_row"
-                    invisible="not allow_billable or not project_id or not partner_id">
+                    invisible="not allow_billable or not partner_id">
                     <field name="sale_line_id"
                         groups="!sales_team.group_sale_salesman"
                         string="Sales Order Item"
@@ -229,23 +229,31 @@
                         title="The sales order associated with this task has been canceled. We recommend either updating the sales order item or canceling this task in alignment with the cancellation of the sales order." 
                         invisible="sale_order_state != 'cancel'"/>
                 </div>
-                <field name="allow_billable" invisible="1"/>
                 <field name="sale_order_state" invisible="1"/>
             </field>
-            <xpath expr="//field[@name='child_ids']/tree/field[@name='sale_line_id']" position="replace">
+            <xpath expr="//field[@name='child_ids']/tree/field[@name='sale_line_id']" position="before">
                 <field name="sale_line_id"
-                       optional="hide"
-                       options='{"no_create": True}'
-                       context="{'create': False, 'edit': False, 'delete': False, 'with_price_unit': True}"
-                       placeholder="Non-billable"
-                       groups="sales_team.group_sale_salesman"
-                       invisible="not allow_billable"/>
-                <field name="sale_line_id" optional="hide" options="{'no_open': True}" readonly="1" groups="!sales_team.group_sale_salesman"/>
+                    optional="hide"
+                    options='{"no_create": True}'
+                    context="{'create': False, 'edit': False, 'delete': False, 'with_price_unit': True}"
+                    placeholder="Non-billable"
+                    groups="sales_team.group_sale_salesman"
+                    invisible="not allow_billable or not partner_id"/>
             </xpath>
-            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='sale_line_id']" position="replace">
-                <field name="sale_line_id" optional="hide" readonly="1" groups="sales_team.group_sale_salesman"/>
-                <field name="sale_line_id" optional="hide" options="{'no_open': True}" readonly="1" groups="!sales_team.group_sale_salesman"/>
-                <field name="allow_billable" column_invisible="True"/>
+            <xpath expr="//field[@name='child_ids']/tree/field[@name='sale_line_id']" position="attributes">
+                <attribute name="groups">!sales_team.group_sale_salesman</attribute>
+            </xpath>
+            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='sale_line_id']" position="before">
+                <field name="sale_line_id"
+                    optional="hide"
+                    options='{"no_create": True}'
+                    context="{'create': False, 'edit': False, 'delete': False, 'with_price_unit': True}"
+                    placeholder="Non-billable"
+                    groups="sales_team.group_sale_salesman"
+                    invisible="not allow_billable or not partner_id"/>
+            </xpath>
+            <xpath expr="//field[@name='depend_on_ids']/tree/field[@name='sale_line_id']" position="attributes">
+                <attribute name="groups">!sales_team.group_sale_salesman</attribute>
             </xpath>
             <field name="project_id" position="attributes">
                 <attribute name="context">{'default_allow_billable': True}</attribute>
