--- a/addons/website_profile/static/src/scss/website_profile.scss
+++ b/addons/website_profile/static/src/scss/website_profile.scss
@@ -97,6 +97,9 @@ $owprofile-color-bg: mix($body-bg, #efeff4);
 
 /// Progress Circle
 .o_wprofile_progress_circle {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 110px;
     position: relative;
 
     svg.o_pc_circular_chart {
