[REM] base, http_routing, portal, website: adapt get_sorted() on lang
- move the method where it's used (in http_routing), there is already a
  lot of method in the base module on langs, it will help
- return dict instead of list, it makes code easier, it's impossible to
  figure what does lg[2] mean, while lg['name'] is obvious

Note: we could have removed the method and do this line at the 2 callers
      instead, but it would mean duplicating the list of fields, not
      ideal.

Note: we keep an explicit sorting order, even if it should not be needed
      as it's already the default order of the model (active, name), and
      the method is only called against recordset of active langs,
      meaning it's actually really sorted by name already. Forcing the
      order will prevent any issue if we change the default ordering of
      the langs, or a custo does it, and has no cost as the methods
      calling it are ormcached.

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2079,7 +2079,7 @@
     </xpath>
 
     <xpath expr="//t[@t-set='active_lang']" position="before">
-        <t t-if="lang not in (lg[0] for lg in frontend_languages)">
+        <t t-if="lang not in (lg['code'] for lg in frontend_languages)">
             <t t-set="lang" t-value="website.default_lang_id.code"/>
         </t>
     </xpath>
@@ -2087,12 +2087,12 @@
     <!-- Add the 'flags' possibility -->
     <xpath expr="//button[contains(@t-attf-class, 'dropdown-toggle')]/span" position="before">
         <t t-if="flags" t-call="website.lang_flag">
-            <t t-set="flag_image_src" t-value="active_lang[4]"/>
+            <t t-set="flag_image_src" t-value="active_lang['flag_image_url']"/>
         </t>
     </xpath>
     <xpath expr="//*[contains(@t-attf-class, 'js_change_lang')]/span" position="before">
         <t t-if="flags" t-call="website.lang_flag">
-            <t t-set="flag_image_src" t-value="lg[4]"/>
+            <t t-set="flag_image_src" t-value="lg['flag_image_url']"/>
         </t>
     </xpath>
 </template>
