--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -125,9 +125,10 @@
             </t>
         </t>
         <!-- `alternate`/`canonical` mainly useful to crawlers/bots/SEO tools, which test the website as public user -->
-        <t t-if="request and request.is_frontend_multilang and website and website.is_public_user()">
+        <!-- no hreflang on non-canonical pages or if no alternate language -->
+        <t t-if="request and request.is_frontend_multilang and website and website.is_public_user() and website._is_canonical_url()">
             <t t-set="alternate_languages" t-value="website._get_alternate_languages()"/>
-            <t t-foreach="alternate_languages" t-as="lg">
+            <t t-if="len(alternate_languages) &gt; 1" t-foreach="alternate_languages" t-as="lg">
         <link rel="alternate" t-att-hreflang="lg['hreflang']" t-att-href="lg['href']"/>
             </t>
         </t>
