[IMP] website: remove useless _get_canonical_url method
`_get_canonical_url()` actually uses request.lang all the time, as it is
supposed to be set when you are in the frontend context, which is the
case since the only call of this method is from the frontend layout.

But we can just use the `lang` qcontext/frontend environment variable
which is always set to the frontend lang, so we don't have to be
careful as we had to be in the python implem.

-----------

Unrelated note about deleted code: the python implem was calling
_get_default_lang(), which once website is installed was just returning
the website default_lang in case of frontend request (which is always
the case when `_get_canonical_url` is called as explained above).

Part-of: odoo/odoo#154242

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -133,7 +133,7 @@
             </t>
         <link rel="alternate" hreflang="x-default" t-att-href="website._get_canonical_url_localized(lang=website.default_lang_id)"/>
         </t>
-        <link t-if="request and website and website.is_public_user()" rel="canonical" t-att-href="website._get_canonical_url()"/>
+        <link t-if="request and website and website.is_public_user()" rel="canonical" t-att-href="website._get_canonical_url_localized(lang=env['res.lang']._lang_get(lang))"/>
         <!-- TODO: Once we have style in DB, add this preconnect only if a
         google font is actually used. Note that if no font is used, the
         preconnect is actually not connecting to the google servers. -->
