[IMP] portal, website: use the same methods for langs URL
This commit unifies everything regarding the language switcher and the
hreflang, thanks to all previous commits.

Due to previous commits, we can now:
- remove `_get_alternate_languages()`
- remove `_get_canonical_url_localized()`
- have the language switcher using the same new `url_localized()` method
  as does the hreflang meta tags
- use the same `frontend_languages` qcontext variable in both places

Without the need of those many website overrides or custom methods as
before the PR.

closes odoo/odoo#154242

Related: odoo/enterprise#56892
Signed-off-by: Romain Derie (rde) <rde@odoo.com>

--- a/addons/portal/views/portal_templates.xml
+++ b/addons/portal/views/portal_templates.xml
@@ -87,7 +87,7 @@
                 </button>
                 <div t-attf-class="dropdown-menu #{_dropdown_menu_class}" role="menu">
                     <t t-foreach="frontend_languages" t-as="lg">
-                        <a class="dropdown-item" t-att-href="url_for(request.httprequest.path + '?' + keep_query(), lang_code=lg['code'])"
+                        <a class="dropdown-item" t-att-href="url_localized(lang_code=lg['code'], prefetch_langs=True, force_default_lang=True)"
                         t-attf-class="dropdown-item js_change_lang #{active_lang == lg and 'active'}"
                         t-att-data-url_code="lg['url_code']" t-att-title="lg['name'].split('/').pop()">
                             <span t-if="not no_text" t-esc="lg['name'].split('/').pop()" t-attf-class="#{_txt_class}"/>
