--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -124,16 +124,16 @@
                 </t>
             </t>
         </t>
-        <t t-set="alternate_languages" t-value="website and website._get_alternate_languages()"/>
+        <t t-set="canonical_domain" t-value="website.get_base_url()"/>
         <!-- `alternate`/`canonical` mainly useful to crawlers/bots/SEO tools, which test the website as public user -->
         <!-- no hreflang on non-canonical pages or if no alternate language -->
-        <t t-if="request and request.is_frontend_multilang and website and website.is_public_user() and website._is_canonical_url() and len(alternate_languages) &gt; 1">
-            <t t-foreach="alternate_languages" t-as="lg">
-        <link rel="alternate" t-att-hreflang="lg['hreflang']" t-att-href="lg['href']"/>
+        <t t-if="request and request.is_frontend_multilang and website and website.is_public_user() and website._is_canonical_url() and len(frontend_languages) &gt; 1">
+            <t t-foreach="frontend_languages" t-as="lg">
+        <link rel="alternate" t-att-hreflang="lg['hreflang']" t-att-href="url_localized(lang_code=lg['code'], prefetch_langs=True, canonical_domain=canonical_domain)"/>
             </t>
-        <link rel="alternate" hreflang="x-default" t-att-href="website._get_canonical_url_localized(lang=website.default_lang_id)"/>
+        <link rel="alternate" hreflang="x-default" t-att-href="url_localized(lang_code=website.default_lang_id._get_cached('code'), canonical_domain=canonical_domain)"/>
         </t>
-        <link t-if="request and website and website.is_public_user()" rel="canonical" t-att-href="website._get_canonical_url_localized(lang=env['res.lang']._lang_get(lang))"/>
+        <link t-if="request and website and website.is_public_user()" rel="canonical" t-att-href="url_localized(lang_code=lang,canonical_domain=canonical_domain)"/>
         <!-- TODO: Once we have style in DB, add this preconnect only if a
         google font is actually used. Note that if no font is used, the
         preconnect is actually not connecting to the google servers. -->
