--- a/addons/pos_deliveroo/views/pos_online_delivery_provider.xml
+++ b/addons/pos_deliveroo/views/pos_online_delivery_provider.xml
@@ -5,6 +5,16 @@
         <field name="model">pos.online.delivery.provider</field>
         <field name="inherit_id" ref="pos_food_delivery_service.pos_online_delivery_provider_form"/>
         <field name="arch" type="xml">
+            <field name="image_128" position="before">
+                <!-- === Update Menu Buttons === -->
+                <div class="oe_button_box" name="button_box">
+                    <button name="action_upload_menu" class="oe_stat_button" type="object" icon="fa-upload">
+                        <div class="o_stat_info o_field_widget">
+                            <span class="o_stat_text">Update Menu on Deliveroo</span>
+                        </div>
+                    </button>
+                </div>
+            </field>
             <field name="client_secret" position="after">
                 <field name="webhook_secret" invisible="code != 'deliveroo'" required="code == 'deliveroo'"/>
                 <field name="site_id" invisible="code != 'deliveroo'" required="code == 'deliveroo'"/>
